--- a/index.html
+++ b/index.html
@@ -58,49 +58,28 @@
         <div class="container">
           <h2 class="hidden">Наши приимущества</h2>
           <ul>
-            <li>
-              <img
-                class="img"
-                src="./images/svg/icon-1.svg"
-                width="66"
-                alt="Внимание к деталям"
-              />
+            <li class="list-item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
-              <img
-                src="./images/svg/icon-2.svg"
-                width="70"
-                alt="Пунктуальность"
-              />
+            <li class="list-item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
-              <img
-                src="./images/svg/icon-3.svg"
-                width="77"
-                alt="Планирование"
-              />
+            <li class="list-item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <img
-                src="./images/svg/icon-4.svg"
-                width="70"
-                alt="Современные технологии"
-              />
+            <li class="list-item">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -156,10 +135,10 @@
               <h3>Николай Кучеренко</h3>
               <p>Product Designer</p>
               <ul>
-                <li class="soc-cont"><a href="">Instagram</a></li>
-                <li class="soc-cont"><a href="">Twitter</a></li>
-                <li class="soc-cont"><a href="">Facebook</a></li>
-                <li class="soc-cont"><a href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
+                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
+                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
+                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -167,10 +146,10 @@
               <h3>Ольга Иванова</h3>
               <p>Frontend Developer</p>
               <ul>
-                <li class="soc-cont"><a href="">Instagram</a></li>
-                <li class="soc-cont"><a href="">Twitter</a></li>
-                <li class="soc-cont"><a href="">Facebook</a></li>
-                <li class="soc-cont"><a href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
+                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
+                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
+                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -178,10 +157,10 @@
               <h3>Андрей Шевченко</h3>
               <p>Marketing</p>
               <ul>
-                <li class="soc-cont"><a href="">Instagram</a></li>
-                <li class="soc-cont"><a href="">Twitter</a></li>
-                <li class="soc-cont"><a href="">Facebook</a></li>
-                <li class="soc-cont"><a href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
+                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
+                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
+                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -189,10 +168,10 @@
               <h3>Иван Николаев</h3>
               <p>UI Designer</p>
               <ul>
-                <li class="soc-cont"><a href="">Instagram</a></li>
-                <li class="soc-cont"><a href="">Twitter</a></li>
-                <li class="soc-cont"><a href="">Facebook</a></li>
-                <li class="soc-cont"><a href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
+                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
+                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
+                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
               </ul>
             </li>
           </ul>
@@ -272,11 +251,17 @@
           <b>Подпишитесь на рассылку</b>
           <form>
             <input type="text" name="e-mail" value="E-mail" />
-            <input type="submit" name="Подписаться" value="Подписаться" />
+            <a class="buttom">Подписаться</a>
+            <!--
+              <input
+              type="submit"
+              name="Подписаться"
+              value="Подписаться"
+            />
+            -->
           </form>
         </section>
       </div>
-      <p lang="en">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
