--- a/portfolio.html
+++ b/portfolio.html
@@ -234,11 +234,17 @@
           <b>Подпишитесь на рассылку</b>
           <form>
             <input type="text" name="e-mail" value="E-mail" />
-            <input type="submit" name="Подписаться" value="Подписаться" />
+            <a class="buttom">Подписаться</a>
+            <!--
+                        <input
+                        type="submit"
+                        name="Подписаться"
+                        value="Подписаться"
+                      />
+                      -->
           </form>
         </section>
       </div>
-      <p lang="en">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
