--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
               <h3>Николай Кучеренко</h3>
               <p>Product Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
-                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
-                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
-                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Inst</a></li>
+                <li class="soc-cont"><a class="link" href="">Twit</a></li>
+                <li class="soc-cont"><a class="link" href="">Face</a></li>
+                <li class="soc-cont"><a class="link" href="">Link</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -146,10 +146,10 @@
               <h3>Ольга Иванова</h3>
               <p>Frontend Developer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
-                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
-                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
-                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Inst</a></li>
+                <li class="soc-cont"><a class="link" href="">Twit</a></li>
+                <li class="soc-cont"><a class="link" href="">Face</a></li>
+                <li class="soc-cont"><a class="link" href="">Link</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -157,10 +157,10 @@
               <h3>Андрей Шевченко</h3>
               <p>Marketing</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
-                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
-                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
-                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Inst</a></li>
+                <li class="soc-cont"><a class="link" href="">Twit</a></li>
+                <li class="soc-cont"><a class="link" href="">Face</a></li>
+                <li class="soc-cont"><a class="link" href="">Link</a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -168,10 +168,10 @@
               <h3>Иван Николаев</h3>
               <p>UI Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Instagram</a></li>
-                <li class="soc-cont"><a class="link" href="">Twitter</a></li>
-                <li class="soc-cont"><a class="link" href="">Facebook</a></li>
-                <li class="soc-cont"><a class="link" href="">Linkedin</a></li>
+                <li class="soc-cont"><a class="link" href="">Inst</a></li>
+                <li class="soc-cont"><a class="link" href="">Twit</a></li>
+                <li class="soc-cont"><a class="link" href="">Face</a></li>
+                <li class="soc-cont"><a class="link" href="">Link</a></li>
               </ul>
             </li>
           </ul>
@@ -184,36 +184,12 @@
         <div class="container">
           <h2 class="big-title">Постоянные клиенты</h2>
           <ul lang="en">
-            <li>
-              <img src="./images/svg/logo-1.svg" width="45" alt="YA&CO" />
-            </li>
-            <li>
-              <img
-                src="./images/svg/logo-2.svg"
-                width="40"
-                alt="COMPANY Tagline Here"
-              />
-            </li>
-            <li>
-              <img src="./images/svg/logo-3.svg" width="41" alt="COMPANY" />
-            </li>
-            <li>
-              <img
-                src="./images/svg/logo-4.svg"
-                width="80"
-                alt="Foster Peters"
-              />
-            </li>
-            <li>
-              <img src="./images/svg/logo-5.svg" width="59" alt="Brand" />
-            </li>
-            <li>
-              <img
-                src="./images/svg/logo-6.svg"
-                width="88"
-                alt="Company Tag Line"
-              />
-            </li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
           </ul>
         </div>
       </section>
