--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
           <ul class="address-header">
             <li>
               <a class="e-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 32" width="10px" height="15px" class="icon-address-header">
+                  <use href="./images/svg/symbol-defs.svg#icon-e-mail"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="phone" href="tel:+380961111111">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 32" width="16px" height="12px" class="icon-address-header">
+                  <use href="./images/svg/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a>
             </li>
           </ul>
         </address>
@@ -59,6 +67,15 @@
           <h2 class="hidden">Наши приимущества</h2>
           <ul>
             <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 32 32" 
+              width="70px" 
+              height="70px" 
+              class="icon-advantages">
+                <use href="./images/svg/symbol-defs.svg#icon-1"></use>
+              </svg>
+                </symbol>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -66,6 +83,9 @@
               </p>
             </li>
             <li class="list-item">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="70px" height="70px" class="icon-advantages">
+                <use href="./images/svg/symbol-defs.svg#icon-2"></use>
+              </svg>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -73,6 +93,9 @@
               </p>
             </li>
             <li class="list-item">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="70px" height="70px" class="icon-advantages">
+                <use href="./images/svg/symbol-defs.svg#icon-3"></use>
+              </svg>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -80,6 +103,9 @@
               </p>
             </li>
             <li class="list-item">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="70px" height="70px" class="icon-advantages">
+                <use href="./images/svg/symbol-defs.svg#icon-4"></use>
+              </svg>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -135,10 +161,20 @@
               <h3>Николай Кучеренко</h3>
               <p>Product Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Inst</a></li>
-                <li class="soc-cont"><a class="link" href="">Twit</a></li>
-                <li class="soc-cont"><a class="link" href="">Face</a></li>
-                <li class="soc-cont"><a class="link" href="">Link</a></li>
+                <li class="soc-cont"><a class="link" href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+                <span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg><span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg><span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg><span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -146,10 +182,18 @@
               <h3>Ольга Иванова</h3>
               <p>Frontend Developer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Inst</a></li>
-                <li class="soc-cont"><a class="link" href="">Twit</a></li>
-                <li class="soc-cont"><a class="link" href="">Face</a></li>
-                <li class="soc-cont"><a class="link" href="">Link</a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg><span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg><span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg><span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg><span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -157,10 +201,18 @@
               <h3>Андрей Шевченко</h3>
               <p>Marketing</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Inst</a></li>
-                <li class="soc-cont"><a class="link" href="">Twit</a></li>
-                <li class="soc-cont"><a class="link" href="">Face</a></li>
-                <li class="soc-cont"><a class="link" href="">Link</a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg><span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg><span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg><span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg><span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -168,10 +220,18 @@
               <h3>Иван Николаев</h3>
               <p>UI Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">Inst</a></li>
-                <li class="soc-cont"><a class="link" href="">Twit</a></li>
-                <li class="soc-cont"><a class="link" href="">Face</a></li>
-                <li class="soc-cont"><a class="link" href="">Link</a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg><span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg><span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg><span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg><span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
           </ul>
@@ -184,12 +244,66 @@
         <div class="container">
           <h2 class="big-title">Постоянные клиенты</h2>
           <ul lang="en">
-            <li class="list-item"></li>
-            <li class="list-item"></li>
-            <li class="list-item"></li>
-            <li class="list-item"></li>
-            <li class="list-item"></li>
-            <li class="list-item"></li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 29 32" 
+              width="50px" 
+              height="50px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-1"></use>
+              </svg>
+            </li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 25 32" 
+              width="40px" 
+              height="52px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-2"></use>
+              </svg>
+            </li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 31 32"
+              width="41px" 
+              height="43px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-3"></use>
+              </svg>
+            </li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 60 32" 
+              width="80px" 
+              height="42px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-4"></use>
+              </svg>
+            </li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 40 32" 
+              width="59px" 
+              height="47px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-5"></use>
+              </svg>
+            </li>
+            <li class="list-item">
+              <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              viewBox="0 0 62 32"
+              width="88px" 
+              height="45px" 
+              class="icon-customers">
+                <use href="./images/svg/symbol-defs.svg#logo-6"></use>
+              </svg>
+            </li>
           </ul>
         </div>
       </section>
@@ -217,17 +331,37 @@
         <section class="social">
           <b>Присоединяйтесь</b>
           <ul class="social-list" lang="en">
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Linkedin</a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+              <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+            <span class="visually-hidden">Instagram</span>
+          </a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+              <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+            <span class="visually-hidden">Twitter</span>
+          </a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+              <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+            <span class="visually-hidden">Facebook</span>
+          </a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+              <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+            <span class="visually-hidden">Linkedin</span>
+          </a></li>
           </ul>
         </section>
         <section class="subscribe">
           <b>Подпишитесь на рассылку</b>
           <form>
             <input type="text" name="e-mail" value="E-mail" />
-            <a class="buttom">Подписаться</a>
+            <a class="buttom">Подписаться
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px" class="icon-send">
+                <use href="./images/svg/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </a>
             <!--
               <input
               type="submit"
