--- a/index.html
+++ b/index.html
@@ -161,20 +161,30 @@
               <h3>Николай Кучеренко</h3>
               <p>Product Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href="">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                <li class="soc-cont">
+                  <a class="link" href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                 </svg>
                 <span class="visually-hidden">Inst</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg><span class="visually-hidden">Twit</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg><span class="visually-hidden">Face</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg><span class="visually-hidden">Link</span></a></li>
+                </svg>
+                <span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -182,18 +192,30 @@
               <h3>Ольга Иванова</h3>
               <p>Frontend Developer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg><span class="visually-hidden">Inst</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg><span class="visually-hidden">Twit</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg><span class="visually-hidden">Face</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg><span class="visually-hidden">Link</span></a></li>
+                </svg>
+                <span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -201,18 +223,30 @@
               <h3>Андрей Шевченко</h3>
               <p>Marketing</p>
               <ul>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg><span class="visually-hidden">Inst</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg><span class="visually-hidden">Twit</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg><span class="visually-hidden">Face</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg><span class="visually-hidden">Link</span></a></li>
+                </svg>
+                <span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
             <li class="team-list">
@@ -220,18 +254,30 @@
               <h3>Иван Николаев</h3>
               <p>UI Designer</p>
               <ul>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg><span class="visually-hidden">Inst</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Inst</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg><span class="visually-hidden">Twit</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Twit</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg><span class="visually-hidden">Face</span></a></li>
-                <li class="soc-cont"><a class="link" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+                </svg>
+                <span class="visually-hidden">Face</span></a></li>
+                <li class="soc-cont">
+                  <a class="link" href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="team-soc">
                   <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg><span class="visually-hidden">Link</span></a></li>
+                </svg>
+                <span class="visually-hidden">Link</span></a></li>
               </ul>
             </li>
           </ul>
