--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>
               <a class="e-mail" href="mailto:info@devstudio.com"
                 >
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 32" width="10px" height="15px" class="icon-address-header">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 12" width="16px" height="11px" class="icon-address-header">
                   <use href="./images/svg/symbol-defs.svg#icon-e-mail"></use>
                 </svg>
                 info@devstudio.com</a
@@ -40,7 +40,7 @@
             </li>
             <li>
               <a class="phone" href="tel:+380961111111">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 32" width="16px" height="12px" class="icon-address-header">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 15" width="10px" height="15px" class="icon-address-header">
                   <use href="./images/svg/symbol-defs.svg#icon-phone"></use>
                 </svg>
                 +38 096 111 11 11</a>
@@ -377,22 +377,26 @@
         <section class="social">
           <b>Присоединяйтесь</b>
           <ul class="social-list" lang="en">
-            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+            <li><a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
               <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
             </svg>
             <span class="visually-hidden">Instagram</span>
           </a></li>
-            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+            <li><a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
               <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
             </svg>
             <span class="visually-hidden">Twitter</span>
           </a></li>
-            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+            <li><a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
               <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
             </svg>
             <span class="visually-hidden">Facebook</span>
           </a></li>
-            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
+            <li><a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="20px" height="20px" class="icon-soc">
               <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
             </svg>
             <span class="visually-hidden">Linkedin</span>
@@ -403,7 +407,7 @@
           <b>Подпишитесь на рассылку</b>
           <form>
             <input type="text" name="e-mail" value="E-mail" />
-            <a class="buttom">Подписаться
+            <a href="" class="buttom">Подписаться
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px" class="icon-send">
                 <use href="./images/svg/symbol-defs.svg#icon-send"></use>
               </svg>
