--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <address class="address">
           <ul class="address-header">
             <li>
-              <a class="e-mail" href="mailto:info@devstudio.com">
+              <a class="e-mail" href="mailto:info@devstudio.com"></a>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 16 12"
@@ -483,66 +483,54 @@
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 29 32"
                 width="50px"
                 height="50px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-1"></use>
               </svg>
             </li>
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 25 32"
                 width="40px"
                 height="52px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-2"></use>
               </svg>
             </li>
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 31 32"
                 width="41px"
                 height="43px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-3"></use>
               </svg>
             </li>
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 60 32"
                 width="80px"
                 height="42px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-4"></use>
               </svg>
             </li>
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 40 32"
                 width="59px"
                 height="47px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-5"></use>
               </svg>
             </li>
             <li class="list-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 62 32"
                 width="88px"
                 height="45px"
-                class="icon-customers"
-              >
+                class="icon-customers">
                 <use href="./images/svg/symbol-defs.svg#logo-6"></use>
               </svg>
             </li>
