--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <address class="address">
           <ul class="address-header">
             <li>
-              <a class="e-mail" href="mailto:info@devstudio.com"></a>
+              <a class="e-mail" href="mailto:info@devstudio.com">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 16 12"
+                  viewBox="0 0 43 32"
                   width="16px"
-                  height="11px"
+                  height="12px"
                   class="icon-address-header"
                 >
                   <use href="./images/svg/symbol-defs.svg#icon-e-mail"></use>
@@ -485,7 +485,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="50px"
                 height="50px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-1"></use>
               </svg>
             </li>
@@ -494,7 +495,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="40px"
                 height="52px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-2"></use>
               </svg>
             </li>
@@ -503,7 +505,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="41px"
                 height="43px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-3"></use>
               </svg>
             </li>
@@ -512,7 +515,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="80px"
                 height="42px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-4"></use>
               </svg>
             </li>
@@ -521,7 +525,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="59px"
                 height="47px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-5"></use>
               </svg>
             </li>
@@ -530,7 +535,8 @@
                 xmlns="http://www.w3.org/2000/svg"
                 width="88px"
                 height="45px"
-                class="icon-customers">
+                class="icon-customers"
+              >
                 <use href="./images/svg/symbol-defs.svg#logo-6"></use>
               </svg>
             </li>
