--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
         <address class="address">
           <ul class="address-header">
-            <li>
+            <li aria-label="E-mail">
               <a class="e-mail" href="mailto:info@devstudio.com">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -43,11 +43,11 @@
                 info@devstudio.com</a
               >
             </li>
-            <li>
+            <li aria-label="Phone">
               <a class="phone" href="tel:+380961111111">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 10 15"
+                  viewBox="0 0 21 32"
                   width="10px"
                   height="15px"
                   class="icon-address-header"
@@ -75,7 +75,7 @@
       <!--ADVANTAGES-->
 
       <section class="advantages">
-        <div class="container">
+        <div class="container" aria-label="Наши приимущества">
           <h2 class="hidden">Наши приимущества</h2>
           <ul>
             <li class="list-item">
@@ -480,7 +480,7 @@
         <div class="container">
           <h2 class="big-title">Постоянные клиенты</h2>
           <ul lang="en">
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 1">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="50px"
@@ -490,7 +490,7 @@
                 <use href="./images/svg/symbol-defs.svg#logo-1"></use>
               </svg>
             </li>
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="40px"
@@ -500,7 +500,7 @@
                 <use href="./images/svg/symbol-defs.svg#logo-2"></use>
               </svg>
             </li>
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 3">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="41px"
@@ -510,7 +510,7 @@
                 <use href="./images/svg/symbol-defs.svg#logo-3"></use>
               </svg>
             </li>
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="80px"
@@ -520,7 +520,7 @@
                 <use href="./images/svg/symbol-defs.svg#logo-4"></use>
               </svg>
             </li>
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 5">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="59px"
@@ -530,7 +530,7 @@
                 <use href="./images/svg/symbol-defs.svg#logo-5"></use>
               </svg>
             </li>
-            <li class="list-item">
+            <li class="list-item" aria-label="Клиент 6">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="88px"
@@ -550,7 +550,7 @@
     <footer class="footer">
       <div class="container">
         <div class="card">
-          <div class="logo-footer">
+          <div class="logo-footer" aria-label="web studio">
             <span class="logo-blue">Web</span>
             <span class="logo-white">Studio</span>
           </div>
