--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         </nav>
         <address class="address">
           <ul class="address-header">
-            <li>
+            <li aria-label="E-mail" aria-label="E-mail">
               <a class="e-mail" href="mailto:info@devstudio.com">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 32" width="16px" height="12px"
                   class="icon-address-header">
@@ -39,7 +39,7 @@
                 </svg>
                 info@devstudio.com</a>
             </li>
-            <li>
+            <li aria-label="Phone"  aria-label="Phone">
               <a class="phone" href="tel:+380961111111">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 32" width="10px" height="15px"
                   class="icon-address-header">
