--- a/portfolio.html
+++ b/portfolio.html
@@ -293,15 +293,8 @@
           <b>Подпишитесь на рассылку</b>
           <form>
             <input type="text" name="e-mail" value="E-mail" />
-            <a class="buttom"
-              >Подписаться
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                width="24px"
-                height="24px"
-                class="icon-send"
-              >
+            <a href="" class="buttom">Подписаться
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px" class="icon-send">
                 <use href="./images/svg/symbol-defs.svg#icon-send"></use>
               </svg>
             </a>
