--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="hero">
         <div class="container">
           <h1>Эффективные решения для вашего бизнеса</h1>
-          <a href="" class="box">Заказать услугу</a>
+          <a href="" class="buttom">Заказать услугу</a>
         </div>
       </section>
 
@@ -481,64 +481,76 @@
           <h2 class="big-title">Постоянные клиенты</h2>
           <ul lang="en">
             <li class="list-item" aria-label="Клиент 1">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="50px"
-                height="50px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-1"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="44px"
+                  height="49px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="list-item" aria-label="Клиент 2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="40px"
-                height="52px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-2"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="40px"
+                  height="52px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="list-item" aria-label="Клиент 3">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="41px"
-                height="43px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-3"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="41px"
+                  height="43px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="list-item" aria-label="Клиент 4">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="80px"
-                height="42px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-4"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="80px"
+                  height="42px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="list-item" aria-label="Клиент 5">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="59px"
-                height="47px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-5"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="59px"
+                  height="47px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="list-item" aria-label="Клиент 6">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="88px"
-                height="45px"
-                class="icon-customers"
-              >
-                <use href="./images/svg/symbol-defs.svg#logo-6"></use>
-              </svg>
+              <a class="link" href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="88px"
+                  height="45px"
+                  class="icon-customers"
+                >
+                  <use href="./images/svg/symbol-defs.svg#logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -560,7 +572,9 @@
               <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
-              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+              <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
@@ -642,12 +656,12 @@
               </svg>
             </a>
             <!--
-              <input
-              type="submit"
-              name="Подписаться"
-              value="Подписаться"
-            />
-            -->
+                        <input
+                        type="submit"
+                        name="Подписаться"
+                        value="Подписаться"
+                      />
+                      -->
           </form>
         </section>
       </div>
